# a-bucket

./: .env.example  .gitignore  AUTHORS.md  DEPLOYMENT.md  README.md  generate_handout.sh
handout/: docker-compose.yml
handout/backend/: Cargo.toml  Dockerfile
handout/backend/crates/a-http-parser/: Cargo.toml
handout/backend/crates/a-http-parser/src/: http.rs  lib.rs  parser.rs  request.rs  response.rs  text_stream.rs
handout/backend/src/: authentication.rs  main.rs  metadata.rs  server.rs  storable.rs  storage.rs
handout/web/: Dockerfile  nginx.conf
handout/web/scripts/: decode_jwt.sh  entrypoint.sh  setup.sh  sign_jwt.sh
handout/web/src/: index.html  style.css  upload.html
