[package]
name = "a-bucket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["crates/*"]

[dependencies]
tokio = { version = "1.29.1", features = ["full"]}
tokio-stream = "0.1.14"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.7"
hex = "0.4.3"
rand = "0.8.5"
base64 = "0.21.2"
async-trait = "0.1.72"
bytes = "1.4.0"

a-http-parser = { version = "*", path = "crates/a-http-parser" }